# mist-recompete-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  pyproject.toml  sshd_config
app/: app.py  app.sh
requirements/: 01-initial-cr.md  02-interface-cr.md
